--- a/src/app/gastos/gastos.component.scss
+++ b/src/app/gastos/gastos.component.scss
@@ -39,3 +39,29 @@ tr.fondoAzul {
   color: white;
   background-color: blue;
 }
+
+td {
+    height: 0.5rem !important;
+    padding: 0;
+    input {
+        margin: 0 !important;
+    }
+    &.anchoColBtn {
+        width: 1.5rem;
+    }
+    &.borrador {
+        background-color: darkgrey;
+    }
+    &.enviado {
+        background-color: lightslategrey;
+    }
+    &.visado {
+        background-color: green;
+    }
+    &.rechazado {
+        background-color: red;
+    }        
+    &.disfrutado {
+        background-color: blue;
+    }
+}
