--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,11 +11,8 @@
         <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
   
           <!-- Content -->
-          <h5 class="font-weight-bold text-uppercase mb-4">Footer Content</h5>
-          <p>Here you can use rows and columns to organize your footer content.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit amet numquam iure provident voluptate
-            esse
-            quasi, veritatis totam voluptas nostrum.</p>
+          <h5 class="font-weight-bold text-uppercase mb-4">Axpe Consulting</h5>
+          <p>Somos una multinacional independiente de consultoría, integración de sistemas y externalización de servicios que guía a grandes organizaciones en su camino hacia la excelencia.</p>
   
         </div>
         <!-- Grid column -->
@@ -41,7 +38,7 @@
             </li>
             <li>
               <p>
-                <a href="#!">BLOG</a>
+                <a href="http://www.axpe-blogs.com">BLOG</a>
               </p>
             </li>
             <li>
@@ -60,24 +57,24 @@
         <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
   
           <!-- Contact details -->
-          <h5 class="font-weight-bold text-uppercase mb-4">Address</h5>
+          <h5 class="font-weight-bold text-uppercase mb-4">Contacto</h5>
   
           <ul class="list-unstyled">
             <li>
               <p>
-                <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+                <i class="fas fa-home mr-3"></i>C/ Arturo Soria, 122</p>
             </li>
             <li>
               <p>
-                <i class="fas fa-envelope mr-3"></i> info@example.com</p>
+                <i class="fas fa-envelope mr-3"></i>28043, Madrid</p>
             </li>
             <li>
               <p>
-                <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                <i class="fas fa-phone mr-3"></i>Tel: +34 915901960</p>
             </li>
             <li>
               <p>
-                <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+                <i class="fas fa-print mr-3"></i>Fax: +34 915623452</p>
             </li>
           </ul>
   
@@ -93,19 +90,19 @@
           <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
   
           <!-- Facebook -->
-          <a type="button" class="btn-floating btn-fb">
+          <a type="button" class="btn-floating btn-fb" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjzyfHR3qnqAhWp8uAKHesUBGwQFjAAegQIAxAB&url=https%3A%2F%2Fes-es.facebook.com%2FAxpeConsultingSpain&usg=AOvVaw2WltJt8bPl870dhJkOWNOt">
             <img class="rounded-circle" src="https://codigodata.com/assets/facebook.png">
           </a>
           <!-- Twitter -->
-          <a type="button" class="btn-floating btn-tw">
+          <a type="button" class="btn-floating btn-tw" href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiurPn33qnqAhUO8hQKHT91CncQ6F56BAgHEAI&url=https%3A%2F%2Ftwitter.com%2Faxpeconsulting%3Fref_src%3Dtwsrc%255Egoogle%257Ctwcamp%255Eserp%257Ctwgr%255Eauthor&usg=AOvVaw1Ed56YT08uf1T6qW4KeMTX">
             <img src="https://codigodata.com/assets//twiter.png" class="rounded-circle">
           </a>
           <!-- Google +-->
-          <a type="button" class="btn-floating btn-gplus">
+          <a type="button" class="btn-floating btn-gplus" href="https://www.google.com/search?client=firefox-b-d&q=axpe+consulting">
             <img src="https://codigodata.com/assets//google.png" class="rounded-circle">
           </a>
           <!-- Dribbble -->
-          <a type="button" class="btn-floating btn-dribbble">
+          <a type="button" class="btn-floating btn-dribbble" href="https://es.linkedin.com/company/axpe-consulting">
             <img src="https://codigodata.com/assets//linkedin.png" class="rounded-circle">
           </a>
   
@@ -120,7 +117,7 @@
   
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+      <a href="https://www.axpe.com//"> Axpe Consulting</a>
     </div>
     <!-- Copyright -->
   
