--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,16 @@
 .medio3 {
     margin: 2rem;
 }
+
+.bloque {
+    LIST-STYLE-TYPE: decima; 
+    background-color: #e3f2fd;
+
+    border: thin solid #E6E6E6;
+    border-color: rgb(0, 0, 0);
+    box-shadow: 0.2rem 0.2rem 0.25rem 0 rgba(125,125,125,0.65);
+    border-top-left-radius: .45rem;
+    border-top-right-radius: .45rem;
+    border-bottom-right-radius: .45rem;
+    border-bottom-left-radius: .45rem;
+}
