--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,8 @@
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
-    <button type="submit" class="btn btn-primary" [disabled]="!authform.form.valid">Submit</button>
+    <button type="submit" class="btn btn-primary"
+        [disabled]="!authform.form.valid">Acceder</button>
   </form>
   </div>
    
