--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -5,4 +5,9 @@
 	justify-content: center;
 	align-items: center;
 	
+	button[type="submit"] {
+		color: black; 
+		background-color: #e3f2fd;
+		margin-bottom: 1rem;
+	}
 }
