--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,17 +2,17 @@
 <div class="bg-dark col-xs-12" id="estilo">
     <form class="center-block" (ngSubmit)="login($event)"  #authform="ngForm">
     <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
+      <label for="exampleInputEmail1">Usuario</label>
       <input ngModel name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <small id="emailHelp" class="form-text text-muted">Uusario de SIPAC.</small>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
+      <label for="exampleInputPassword1">Contraseña</label>
       <input ngModel name="password"  type="password" class="form-control" id="exampleInputPassword1" required>
     </div>
     <div class="form-group form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      <label class="form-check-label" for="exampleCheck1">Contraseña del usuario SIPAC</label>
     </div>
     <button type="submit" class="btn btn-primary"
         [disabled]="!authform.form.valid">Acceder</button>
